src/gui/scss/core/_global.scss
/* ... */
.filter-bar {
  background: #24262A;
  width: auto;
  display: inline-flex;
  flex-direction: row;
  align-items: center;
  color: white;
  height: 30px;
  font-size: 13px;
  padding: 0 10px;
  border-radius: 8px;
  margin-right: 4px;
  margin-bottom: 4px;
  justify-content: space-between;
  cursor: pointer;
  border: none;
  &:hover, &:focus {
    opacity: 0.8;
  }
  .filter-remove-btn {
    border: none;
    color: white;
    text-decoration: none;
  }
}

.role-bar {
  background: #24262A;
  width: auto;
  display: inline-flex;
  flex-direction: row;
  align-items: center;
  color: white;
  height: 30px;
  font-size: 13px;
  padding: 0 10px;
  border-radius: 8px;
  margin-right: 4px;
  margin-bottom: 4px;
  justify-content: space-between;
  &.disabled {
    opacity: 0.6;
    cursor: not-allowed;
  }
}

.fb-tag {
  background: #24262A;
  width: auto;
  display: inline-flex;
  flex-direction: row;
  align-items: center;
  color: white;
  font-size: 13px;
  border-radius: 8px;
  margin-right: 4px;
  margin-bottom: 4px;
  justify-content: space-between;

  span.tag-name {
    padding: 6px 0px 6px 10px;
  }

  span.tag-remove {
    padding: 6px 10px;
  }

  &.disabled {
    opacity: 0.6;
    cursor: not-allowed;
  }
}

.effect-bar {
  background: #16809c;
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  color: white;
  height: 40px;
  padding-left: 15px;
  border-radius: 8px;
  margin-bottom: 5px;
  line-height: 1.1;
  justify-content: space-between;

  &.disabled {
    background: #6c6c6c;
    color: rgba(255,255,255,0.8);
  }
}

.flex-center {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center
}

.flex-row-center {
  display: flex;
  flex-direction: row;
  align-items: center;
  &.jcenter {
    justify-content: center
  }
  &.jspacebetween {
    justify-content: space-between;
  }
}

.flex-row {
  display: flex;
  flex-direction: row;
  &.acenter {
    align-items: center;
  }
  &.astart {
    align-items: flex-start;
  }
  &.aend {
    align-items: flex-end;
  }
  &.jcenter {
    justify-content: center;
  }
  &.jspacebetween {
    justify-content: space-between;
  }
}

.no-before {
  &::before {
    content: none !important;
  }
}

.no-after {
  &::after {
    content: none !important;
  }
}

.tooltip {
  z-index:999999999999999999;
}

.fb-transition {
  position:absolute!important;
  .modal-dialog {
    transition: transform .2s ease-out 0s;
  }
}

.fb-medium-modal {
  .modal-dialog {
    width: 475px !important;
  }
}

.fastest {
  animation-duration: 100ms;
}

.appwrapper {
  display: flex;
  flex-direction: row;
  height: 100%;
  margin: 0px;
  padding-top: 0;
  padding-bottom: 0;
  font-family: 'Open Sans', sans-serif !important;
  color:$content-text-color;
}

.CodeMirror {
  border-radius: 8px !important;
}

.cm-s-blackboard {
  background: #24262a !important;
  .CodeMirror-gutters {
    background: #24262a !important;
  }
}

.cm-resize-handle {
  box-shadow: none !important;
}

.text-editor-black-bg {
  .note-editable {
    background-color: black !important;
  }
}

.text-editor-white-bg {
  .note-editable {
    background-color: white !important;
  }
}

.searchbar-wrapper {
  display: inline-block;
  position: relative;
  width: 250px;
}

.searchbar-icon {
  position: absolute;
  left: 8px;
  top: 9px;
}

.searchbar-clear-btn {
  position: absolute;
  right: 8px;
  top: 9px;
}

.volume-slider-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  .volume-low {
    font-size: 30px;
    margin-right: 10px;
    color: #337ab7;
    align-self: flex-end;
    padding-bottom: 3px;
  }
  .volume-high {
    font-size: 30px;
    margin-left: 10px;
    color: #337ab7;
    align-self: flex-end;
    padding-bottom: 3px;
  }
}

.angular-context-menu {
  min-width: 155px!important;
}

column-resizer {
  height: 100%;
  min-width: 2px;
  background: #373c3e;
  position: relative;

  .resizer-hitbox {
    position: absolute;
    top: 0;
    bottom: 0;
    left: -5px;
    right: -5px;
    z-index: 9999;

    &:hover {
      cursor: col-resize;
    }
  }
}

#ghostbar {
  width: 3px;
  background-color: #373c3e;
  opacity: 0.5;
  position: absolute;
  bottom: 0;
  top: 0;
  cursor: col-resize;
  z-index: 10000
}

.note-palette-title {
  color: $change-note-palette-title-color;
}

.display-1{
  font-size: 1.2em;
}

.twitch-account {
    border: 2px #494F51;
    height: 100px;
    width: 100%;
    border-radius: 8px;
    &.connected {
        border-style: solid;
    }
    &.not-connected {
      background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='4' ry='4' stroke='%23494F51FF' stroke-width='4' stroke-dasharray='18%2c15' stroke-dashoffset='10' stroke-linecap='round'/%3e%3c/svg%3e");
    }
}

.dcf-link-panel {
    border-radius: 8px;
    overflow: hidden;
    background: $dcf-panel-content-background;
    .dcf-link-container {
        position: relative;
        padding: 15px 50px 15px 15px;
        background: $dcf-panel-header-background;
        font-family: monospace;
        text-align: left;
        .dcf-clone-btn {
            position: absolute;
            right: 20px;
            top: 50%;
            transform: translateY(-50%);
            bottom: 0;
            display: flex;
            align-items: center;
            font-size: 17px;
            cursor: pointer;
            &:hover {
                color: #12d0ff;
            }
            &.is-cta {
                color: #12d0ff;
                &:hover {
                    color: #11add4;
                }
            }
        }
    }
}

